--- a/index.ipynb
+++ b/index.ipynb
@@ -149,13 +149,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Art vandelay'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"art vandelay\".capitalize # 'Art Vandelay'"
+    "\"art vandelay\".capitalize() # 'Art Vandelay'"
    ]
   },
   {
