--- a/index.ipynb
+++ b/index.ipynb
@@ -177,12 +177,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\"Ceo\" # 'CEO'"
+    "\"Ceo\".Upper() # 'CEO'"
    ]
   },
   {
