--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "\"art.vandelay@vandelay.co\".endswith(\".com\")\n",
+    "# False"
    ]
   },
   {
